[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allbeapi"
version = "0.1.0"
description = "Turn any Python library into an MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Tingjia Zhang", email = "tingjiainfuture@gmail.com" },
]
urls.Homepage = "https://github.com/TingjiaInFuture/allbeapi"
urls.Repository = "https://github.com/TingjiaInFuture/allbeapi"

dependencies = [
  "mcp>=1.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "docker>=6.0.0",
  "starlette>=0.27.0",
]

[project.scripts]
allbeapi = "allbeapi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/allbeapi"]
