[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allbemcp"
version = "1.2.0"
description = "Turn any Python library into an MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Tingjia Zhang", email = "tingjiainfuture@gmail.com" },
]
urls.Homepage = "https://github.com/TingjiaInFuture/allbemcp"
urls.Repository = "https://github.com/TingjiaInFuture/allbemcp"

dependencies = [
  "fastmcp>=3.0.0",
  "mcp>=1.26.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "docker>=7.0.0",
  "starlette>=0.37.0",
  "docstring-parser>=0.16.0",
]

[project.scripts]
allbemcp = "allbemcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/allbemcp"]
